# pandas-agent

./: .env  .env.example  .gitignore  README.md  pandas_agent.py  pyproject.toml
src/simple/: hello.py  pandas_agent.py  pydantic_hello.py
